--- a/Weitianshi/pages/organization/org_detail/org_detail.wxss
+++ b/Weitianshi/pages/organization/org_detail/org_detail.wxss
@@ -5,13 +5,13 @@ page {
   /* overflow: hidden; */
 }
 
-.media {
+.media1 {
   width: 92%;
   margin: 0 auto;
   height: auto;
   background: #fff;
   margin-top: 37.44rpx;
-  /* box-shadow: 0 2px 4px 0 rgba(64, 88, 122, 0.10); */
+   box-shadow: 0 2px 4px 0 rgba(64, 88, 122, 0.10); 
 }
 
 .inMedia {
