--- a/Weitianshi/pages/organization/org_detail/org_detail.wxml
+++ b/Weitianshi/pages/organization/org_detail/org_detail.wxml
@@ -2,7 +2,7 @@
 <import src="/pages/Template/Template.wxml" />
 <scroll-view style='heigt:3000rpx;' scroll-y='true' >
   <!--投资机构类型，标签  -->
-  <view class="media">
+  <view class="media1">
     <view class="inMedia">
       <view class="detailIntroduce flex">
         <view class="detailLogo">
@@ -27,7 +27,7 @@
     </view>
   </view>
   <!--投资策略  -->
-  <view class="media">
+  <view class="media1">
     <view class="inMedia investBottom">
       <view class="investStrategy">投资策略</view>
       <view class="investStrategy1">* 根据机构近期投资事件刻画投资图谱</view>
@@ -35,7 +35,7 @@
     </view>
   </view>
   <!--机构介绍  -->
-  <view class="media">
+  <view class="media1">
     <view class="inMedia investBottom">
       <view class="investStrategy investBottom">机构介绍</view>
       <view  class="{{checkedArr.ischecked1?'investIntroduce':'investIntroduceAfter'}}">{{info.investment_introduce}}</view>
@@ -44,7 +44,7 @@
     </view>
   </view>
    <!--资本规模  -->
-  <view class="media">
+  <view class="media1">
     <view class="inMedia investBottom">
      <view class="scale">
      <view class="scaleTitle investBottom">管理资本规模</view>
@@ -61,7 +61,7 @@
     </view>
   </view>
    <!--投资领域  -->
-  <view class="media">
+  <view class="media1">
     <view class="inMedia investBottom">
      <view class="industry investBottom">投资领域</view>
       <view class="detailType">
@@ -79,7 +79,7 @@
     </view>
   </view>
      <!--投资轮次  -->
-  <view class="media">
+  <view class="media1">
     <view class="inMedia investBottom">
      <view class="industry investBottom">投资轮次</view>
       <view class="detailType">
@@ -92,7 +92,7 @@
     </view>
   </view>
    <!--基金管理方  -->
-  <view class="media">
+  <view class="media1">
     <view class="inMedia investBottom">
      <view class="industry investBottom">基金管理方</view>
      <view class="manageCompany">和谐爱奇投资管理有限公司</view>
@@ -100,7 +100,7 @@
     </view>
   </view>
     <!--投资案例  -->
-  <view class="media">
+  <view class="media1">
     <view class="inMedia investBottom flex case1">
      <view class="case investBottom">投资案例</view>
      <view class="caseAll investBottom">
