--- a/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxml
+++ b/Weitianshi/pages/organization/subPage/list_investCase/list_investCase.wxml
@@ -6,9 +6,11 @@
   </view>
 <!--循环投资案例  -->
   <scroll-view  wx:if="{{project_list.length != 0}}" style='heigt:90%;'  scroll-y='true' bindscrolltolower='loadMore'>
+  <view class="media">
     <block wx:for="{{project_list}}" wx:key="{{project_list}}">
      <template is='invest' data='{{item}}'></template>
     </block>
+    </view>
   </scroll-view>
   <!--错误提示-->
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
