--- a/Weitianshi/pages/organization/subPage/list_media/list_media.wxss
+++ b/Weitianshi/pages/organization/subPage/list_media/list_media.wxss
@@ -2,17 +2,25 @@ page {
   height: 100%;
   /* overflow: hidden; */
 }
-.media {
+
+.media12 {
   width: 100%;
   height: auto;
   background: #fff;
 }
 
 .inMedia {
-   /* padding: 42rpx 32rpx -2rpx 32rpx;  */
-  padding-top:42rpx;
-  padding-left: 32rpx;
-  padding-right: 32rpx;
+  /* padding: 42rpx 32rpx -2rpx 32rpx;  */
+  padding-top: 42rpx;
+  /* padding-left: 32rpx;
+  padding-right: 32rpx; */
+  border-bottom: 1px solid #e6e6e6;
+  margin: 0 auto;
+  width: 92%;
+}
+
+.inMedia:last-child {
+  border-bottom: 0;
 }
 
 .mediaTime {
@@ -39,11 +47,13 @@ page {
 .mediaType {
   font-size: 10px;
   color: #999;
-  margin-bottom: 34rpx;
+  padding-bottom: 24rpx;
 }
-.mediaTypeRight{
+
+.mediaTypeRight {
   margin-right: 10rpx;
 }
-.mediaLine{
-   border-bottom: 1px solid #e6e6e6;
+
+.mediaLine {
+  border-bottom: 1px solid #e6e6e6;
 }
