--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1178,6 +1178,7 @@
    </view>
    <!-- <view class="mediaLine"></view> -->
   </view>
+</template>  
   
 <!--机构成员  -->
 <template name="memberList">
