--- a/Weitianshi/utils/wxml/threeTab.wxml
+++ b/Weitianshi/utils/wxml/threeTab.wxml
@@ -15,7 +15,7 @@
             <view class="brightPoint " wx:if="{{project.pro_goodness.length!=0}}">
               <view class="brightPointBox flex">
                 <image src="/img/img-star.png" class="titlePic"></image>
-                <view class="title star">项目亮点</view>
+                <view class="title star">投资亮点</view>
               </view>
               <view class="{{isChecked0?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
                 <block wx:for="{{project.pro_goodness}}" wx:for-item="goodness" wx:key="{{index}}">
@@ -26,19 +26,19 @@
                     </view>
                   </view>
                 </block>
-               
+
               </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true && textBeyond0==true}}" data-check="{{0}}">全部</label>
-                <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false && textBeyond0==true}}" data-check="{{0}}">收起</label>
+              <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true && textBeyond0==true}}" data-check="{{0}}">全部</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false && textBeyond0==true}}" data-check="{{0}}">收起</label>
             </view>
             <!--市场概况pro_market_genera  -->
-             <view class="brightPoint " wx:if="{{project.pro_market_genera.length!=0}}">
+            <view class="brightPoint " wx:if="{{project.pro_market_genera.length!=0}}">
               <view class="brightPointBox flex">
-               <image src="/img/icon-shichanggaikuang@2x.png" class="titlePic"></image>
+                <image src="/img/icon-shichanggaikuang@2x.png" class="titlePic"></image>
                 <view class="title star">市场概况</view>
               </view>
               <view class="{{isChecked1?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-                <block wx:for="{{project.pro_market_genera}}" wx:for-item="goodness"  wx:key="{{index}}">
+                <block wx:for="{{project.pro_market_genera}}" wx:for-item="goodness" wx:key="{{index}}">
                   <view class="goodTitle1">
                     <view class="goodTitle">【{{goodness.goodness_title}}】</view>
                     <view class="brightContent">
@@ -46,19 +46,19 @@
                     </view>
                   </view>
                 </block>
-               
+
               </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked1 == true && textBeyond1==true}}" data-check="{{1}}">全部</label>
-                <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked1== false && textBeyond1==true}}" data-check="{{1}}">收起</label>
+              <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked1 == true && textBeyond1==true}}" data-check="{{1}}">收起</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked1== false && textBeyond1==true}}" data-check="{{1}}">全部</label>
             </view>
             <!--产品概况pro_service -->
-             <view class="brightPoint " wx:if="{{project.pro_service.length!=0}}">
+            <view class="brightPoint " wx:if="{{project.pro_service.length!=0}}">
               <view class="brightPointBox flex">
                 <image src="/img/icon-chanpingaikuang@2x.png" class="titlePic"></image>
                 <view class="title star">产品概况</view>
               </view>
               <view class="{{isChecked2?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-                <block wx:for="{{project.pro_service}}" wx:for-item="goodness"  wx:key="{{index}}">
+                <block wx:for="{{project.pro_service}}" wx:for-item="goodness" wx:key="{{index}}">
                   <view class="goodTitle1">
                     <view class="goodTitle">【{{goodness.goodness_title}}】</view>
                     <view class="brightContent">
@@ -66,19 +66,19 @@
                     </view>
                   </view>
                 </block>
-               
+
               </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked2 == true && textBeyond2==true}}" data-check="{{2}}">全部</label>
-                <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked2== false && textBeyond2==true}}" data-check="{{2}}">收起</label>
+              <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked2 == true && textBeyond2==true}}" data-check="{{2}}">收起</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked2== false && textBeyond2==true}}" data-check="{{2}}">全部</label>
             </view>
             <!--商业模式 pro_business_model -->
-             <view class="brightPoint " wx:if="{{project.pro_business_model.length!=0}}">
+            <view class="brightPoint " wx:if="{{project.pro_business_model.length!=0}}">
               <view class="brightPointBox flex">
                 <image src="/img/icon-shangyemoshi@2x.png" class="titlePic"></image>
                 <view class="title star">商业模式</view>
               </view>
               <view class="{{isChecked3?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-                <block wx:for="{{project.pro_business_model}}" wx:for-item="goodness"  wx:key="{{index}}">
+                <block wx:for="{{project.pro_business_model}}" wx:for-item="goodness" wx:key="{{index}}">
                   <view class="goodTitle1">
                     <view class="goodTitle">【{{goodness.goodness_title}}】</view>
                     <view class="brightContent">
@@ -86,10 +86,10 @@
                     </view>
                   </view>
                 </block>
-               
+
               </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked3 == true && textBeyond3==true}}" data-check="{{3}}">全部</label>
-                <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked3== false && textBeyond3==true}}" data-check="{{3}}">收起</label>
+              <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked3 == true && textBeyond3 == true}}" data-check="{{3}}">收起</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked3 == false && textBeyond3 == true}}" data-check="{{3}}">全部</label>
             </view>
             <!--项目资料-->
             <view class="material" style="position:relative;" wx:if="{{project.pro_BP.length != 0|| project.pro_name != ''||project.pro_company_name != ''||project.pro_status != ''||project.pro_company_scale !=''||project.pro_website != ''||project.contact.user_name !=''||project.contact.user_mobile !=''}}">
