--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1123,7 +1123,7 @@
 <!--投资机构  -->
 <template name="investment">
   <block wx:for="{{investment_list.list}}" wx:key="{{index}}">
-    <view class="investGroupBlock flex">
+    <view class="investGroupBlock flex" bindtap="institutionalDetails" data-id="{{item.investment_id}}">
       <view class="investGroupLeft">
         <!-- <image src="{{item.investment_logo}}" class="investGroupLeft" wx:if="{{item.investment_logo}}"></image> -->
         <!-- <image src="/img/warband-logo.png" class="investGroupLeft"></image> -->
@@ -1154,9 +1154,9 @@
           </view>
         </view>
         <view class="projectListBlock">
-          <block wx:for="{{item.project_list}}" wx:key="{{index}}" wx:if="{{item.project_list.length != 0}}" wx:for-item="projectList">
-            <label wx:if="{{index < item.project_list.length-1}}">{{projectList.event_time}}【{{projectList.event_project_name}}】、</label>
-            <label wx:if="{{index == item.project_list.length-1}}">{{projectList.event_time}}【{{projectList.event_project_name}}】</label>
+          <block wx:for="{{item.investment_events}}" wx:key="{{index}}" wx:if="{{item.investment_events.length != 0}}" wx:for-item="investment_eventsList">
+            <label wx:if="{{index < item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】、</label>
+            <label wx:if="{{index == item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】</label>
           </block>
         </view>
       </view>
@@ -1166,22 +1166,23 @@
 
 <!--媒体新闻  -->
 <template name="media">
-<view id="mediaNew" class="inMedia ">
-   <view class="mediaTime flex">{{item.time}}</view>
-   <view class="mediaTitle">
-   {{item.content}}
-   </view>
-   <view class=" mediaType flex">
-    <view class="mediaTypeRight">{{item.industry_name}}</view>
-    <view class="mediaTypeRight">|</view>
-    <view>{{item.ori_url}}</view>
-   </view>
-   <!-- <view class="mediaLine"></view> -->
-  </view>
-  
+  <view id="mediaNew" class="inMedia ">
+    <view class="mediaTime flex">{{item.time}}</view>
+    <view class="mediaTitle">
+    {{item.content}}
+    </view>
+    <view class=" mediaType flex">
+      <view class="mediaTypeRight">{{item.industry_name}}</view>
+      <view class="mediaTypeRight">|</view>
+      <view>{{item.ori_url}}</view>
+    </view>
+    <!-- <view class="mediaLine"></view> -->
+    </view>
+</template>
+
 <!--机构成员  -->
 <template name="memberList">
-  <block wx:for="{{memberList}}" wx:key="{{index}}">
+  <block wx:for="{{memberList.list}}" wx:key="{{index}}">
     <view class="memberInfo flex">
       <view class="memberInfoLeft">
       <!-- <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}"></image> -->
