--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -28,7 +28,7 @@
           <block wx:for="{{investormentList.style_list}}" wx:key="{{index}}">
             <view class="investStyleBlock">
               <view class="investStyleTitle">{{item.style_name}}</view>
-              <view class="investStyleNum"><label>{{item.investmen_num}}</label>个机构</view>
+              <view class="investStyleNum"><label>{{item.investment_num}}</label>个机构</view>
             </view>
           </block>
         </view>
@@ -38,7 +38,7 @@
       <view class="outStyleBox">
         <view class="flex title">
           <view class="blockTitle">热门领域</view>
-          <view class="allThing" bindtap="toGoIndustry">全部<label>(10)</label></view>
+          <view class="allThing" bindtap="toGoIndustry">全部<label>（{{investormentList.industry_list.industry_total_num}}）</label></view>
         </view>
         <view class="blockIntro">* 近一年行业热门投资的相关数据</view>
         <view class="industryTitleBlock flex">
@@ -47,12 +47,18 @@
           <view class="industryTitle">获投项目</view>
           <view class="industryTitle">媒体热度</view>
         </view>
-        <block wx:for="{{investormentList.industry_list}}" wx:key="{{index}}">
+        <block wx:for="{{investormentList.industry_list.list}}" wx:key="{{index}}">
           <view class="industryContentBlock flex">
             <view class="industryContentTitle">{{item.industry_name}}</view>
             <view class="industryContent">{{item.invested_num}}</view>
             <view class="industryContent">{{item.project_num}}</view>
-            <view class="industryContent">{{item.media_hot}}</view>
+            <view class="industryContent flex">
+              <view>{{item.media_hot}}</view>
+              <image src="/img/icon-jiantouxia@2x.png" class="arrow" wx:if="{{item.status == 2}}"></image>
+              <image src="/img/icon-jiantoushang@2x.png" class="arrow" wx:if="{{item.status == 1}}"></image>
+              <view class="up" wx:if="{{item.status == 1}}">{{item.media_fix}}</view>
+              <view class="down" wx:if="{{item.status == 2}}">{{item.media_fix}}</view>
+            </view>
           </view>
         </block>
       </view>
