--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxss
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxss
@@ -320,3 +320,23 @@
 .title {
   justify-content: space-between;
 }
+.down {
+  font-size: 20rpx;
+  color: #28dc41;
+  line-height: 30rpx;
+  text-align: left;
+}
+
+.up {
+  font-size: 20rpx;
+  color: #f44c4c;
+  line-height: 30rpx;
+  text-align: left;
+}
+
+.arrow {
+  width: 12rpx;
+  height: 6rpx;
+  padding-top : 12rpx;
+  margin:0 4rpx 0 12rpx
+}
