--- a/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxss
+++ b/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxss
@@ -1,12 +1,15 @@
 /* pages/organization/subPage/list_industry/list_industry.wxss */
-.page{
+
+.page {
   background: #fff;
 }
+
 .outStyleBox {
   margin-bottom: 32rpx;
   background: #fff;
   padding: 32rpx;
 }
+
 .blockTitle {
   font-size: 30rpx;
   color: #333;
@@ -76,4 +79,25 @@
 
 .title {
   justify-content: space-between;
+}
+
+.down {
+  font-size: 20rpx;
+  color: #28dc41;
+  line-height: 30rpx;
+  text-align: left;
+}
+
+.up {
+  font-size: 20rpx;
+  color: #f44c4c;
+  line-height: 30rpx;
+  text-align: left;
+}
+
+.arrow {
+  width: 12rpx;
+  height: 6rpx;
+  padding-top : 12rpx;
+  margin:0 4rpx 0 12rpx
 }
