--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxml
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxml
@@ -78,7 +78,9 @@
     <view class="businessBook">私密性设置</view>
   </view>
 </view>
-
+<view class=" flex floatBtn flexBox jigou" hidden="{{currentTab==0||currentTab==2 }}">
+     机构版买家图谱
+</view>
 <!--邮箱-->
 <view class="modal" wx:if="{{sendPc == 1}}">
   <view class="bpModal">
