--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1075,44 +1075,48 @@
 
 <!--投资案例  -->
 <template name="invest">
-    <view  id="invest" class="invest">
-      <view class="flex investW">
-        <view class="investLogo">
-          <view class="investLogo1">
-            <image src="{{item.project_logo}}"></image>
-          </view>
-        </view>
-        <view class="investRight">
-          <view class="investName flex">
-            <view class="investName1">{{item.project_name}}</view>
-            <view class="investHot" wx:if="{{item.is_hot==1}}">Hot</view>
-            <block wx:for="{{item.style_list}}" wx:key="{{item.style_list}}">
-              <view class="investWheel investInduryone">{{item.style_name}}</view>
-            </block>
-
-          </view>
-          <view class="investIndury">
-            <block wx:for="{{item.industry_list}}" wx:key="{{item.industry_list}}">
-              <view class="investInduryone">{{item.industry_name}}、</view>
-            </block>
-          </view>
-          <view class="investOther flex">
-            <view class=" investLeft">{{item.project_round}}</view>
-            <view class="investLeft">|</view>
-            <view class="investLeft">{{item.project_money}}</view>
-            <view class="investLeft">|</view>
-            <view>{{item.event_time}}</view>
-          </view>
-          <view class="investDetail">
-            <block wx:for="{{item.investment_list}}" wx:key="{{item.investment_list}}">
-              <view class="investInduryone">{{item.investment_name}}、</view>
-            </block>
-          </view>
+  <view id="invest" class="invest">
+    <view class="flex investW">
+      <view class="investLogo">
+        <view class="investLogo1">
+          <image src="{{item.project_logo}}" wx:if="{{item.project_logo}}"></image>
+           <image src="/img/warband-logo.png"  wx:if="{{item.project_logo==''}}"></image>
         </view>
       </view>
-      <!-- <view class="mediaLine"></view> -->
+      <view class="investRight">
+        <view class="investName flex">
+          <view class="investName1">{{item.project_name}}</view>
+          <view class="investHot" wx:if="{{item.is_hot==1}}">Hot</view>
+          <block wx:for="{{item.style_list}}" wx:key="{{item.style_list}}">
+            <view class="investWheel investInduryone">{{item.style_name}}</view>
+          </block>
+
+        </view>
+        <view class="investIndury">
+          <block wx:for="{{item.industry_list}}" wx:key="{{index}}" wx:for-item="industryList">
+            <view class="investInduryone" wx:if="{{index <  item.industry_list.length-1}}">{{industryList.industry_name}}、</view>
+            <view class="investInduryone" wx:if="{{index == item.industry_list.length-1}}">{{industryList.industry_name}}</view>
+          </block>
+        </view>
+        <view class="investOther flex">
+          <view class=" investLeft">{{item.project_round}}</view>
+          <view class="investLeft">|</view>
+          <view class="investLeft">{{item.project_money}}</view>
+          <view class="investLeft">|</view>
+          <view>{{item.event_time}}</view>
+        </view>
+        <view class="investDetail">
+          <block wx:for="{{item.investment_list}}" wx:key="{{index}}" wx:for-item="investList">
+            <!-- <view class="investInduryone" >{{item.investment_name}}、</view> -->
+             <view class="investInduryone" wx:if="{{index <  item.investment_list.length-1}}">{{investList.investment_name}}、</view>
+            <view class="investInduryone" wx:if="{{index == item.investment_list.length-1}}">{{investList.investment_name}}</view>
+          </block>
+        </view>
+      </view>
     </view>
- 
+    <!-- <view class="mediaLine"></view> -->
+  </view>
+
 </template>
 
 <!--投资领域  -->
@@ -1166,37 +1170,119 @@
 
 <!--媒体新闻  -->
 <template name="media">
-<view id="mediaNew" class="inMedia ">
-   <view class="mediaTime flex">{{item.time}}</view>
-   <view class="mediaTitle">
-   {{item.content}}
-   </view>
-   <view class=" mediaType flex">
-    <view class="mediaTypeRight">{{item.industry_name}}</view>
-    <view class="mediaTypeRight">|</view>
-    <view>{{item.ori_url}}</view>
-   </view>
-   <!-- <view class="mediaLine"></view> -->
+  <view id="mediaNew" class="inMedia ">
+    <view class="mediaTime flex">{{item.time}}</view>
+    <view class="mediaTitle">
+      {{item.content}}
+    </view>
+    <view class=" mediaType flex">
+      <view class="mediaTypeRight">{{item.industry_name}}</view>
+      <view class="mediaTypeRight">|</view>
+      <view>{{item.ori_url}}</view>
+    </view>
+    <!-- <view class="mediaLine"></view> -->
   </view>
-  
+</template>
+
 <!--机构成员  -->
 <template name="memberList">
   <block wx:for="{{memberList}}" wx:key="{{index}}">
     <view class="memberInfo flex">
       <view class="memberInfoLeft">
-      <!-- <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}"></image> -->
-       <!-- <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view> -->
+        <!-- <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}"></image> -->
+        <!-- <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view> -->
       </view>
       <view class="memberInfoRight">
         <view class="flex memberInfoTop">
           <view class="memberName">{{item.member_name}}</view>
           <view class="memberTitle" wx:if="{{item.is_former == 0}}">在职</view>
-            <view class="memberTitle" wx:if="{{item.is_former == 1}}">离职</view>
+          <view class="memberTitle" wx:if="{{item.is_former == 1}}">离职</view>
         </view>
-        <view class="flex memberCompany"  wx:if="{{item.investment_name || item.member_position}}">
-          <label>{{item.investment_name}}</label> · <label>{{item.member_position}}</label>
+        <view class="flex memberCompany" wx:if="{{item.investment_name || item.member_position}}">
+          <label>{{item.investment_name}}</label> ·
+          <label>{{item.member_position}}</label>
         </view>
         <view class="memberDes" wx:if="{{item.member_introduce}}">{{item.member_introduce}}</view>
+      </view>
+    </view>
+  </block>
+</template>
+
+<!--详情中机构成员  -->
+<template name="memberList1">
+  <view id="memberList1">
+ 
+      <view class="memberInfo flex">
+        <view class="memberInfoLeft">
+          <!-- <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}"></image> -->
+          <!-- <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view> -->
+        </view>
+        <view class="memberInfoRight">
+          <view class="flex memberInfoTop">
+            <view class="memberName">{{item.member_name}}</view>
+            <view class="memberTitle">{{item.member_position}}</view>
+          </view>
+          <view class="flex memberCompany" wx:if="{{item.industry_list}}">
+            <view class="memberMain1">
+              <view class="memberMain">主投</view>
+            </view>
+            <view class="memberIndustry">
+              <block wx:for="{{item.industry_list}}" wx:key="{{index}}" wx:for-item="memList">
+                  <view class="memberName1" wx:if="{{index <  item.industry_list.length-1}}">{{memList.industry_name}}、</view>
+            <view class="memberName1" wx:if="{{index == item.industry_list.length-1}}">{{memList.industry_name}}</view>
+              </block>
+            </view>
+          </view>
+          <view class="memberDes" wx:if="{{item.member_introduce}}">{{item.member_introduce}}</view>
+        </view>
+      </view>
+   
+  </view>
+</template>
+
+<!--投资机构  -->
+<template name="investment1">
+  <block wx:for="{{investment_list}}" wx:key="{{index}}">
+    <view class="investGroupBlock flex">
+    <view class="invest1Left">
+      <view class="investGroupLeft">
+        <!-- <image src="{{item.investment_logo}}" class="investGroupLeft" wx:if="{{item.investment_logo}}"></image> -->
+        <!-- <image src="/img/warband-logo.png" class="investGroupLeft"></image> -->
+      </view>
+      <view class="match1">匹配度</view>
+      <view class="match">{{item.match_rate}}%</view>
+      </view>
+      <view class="investGroupRight">
+        <view class="flex investTitleBlock">
+          <view class="investTitle">{{item.investment_name}}</view>
+          <view class="investNum">
+            <label>{{item.investment_event_count}}</label>个投资案例</view>
+        </view>
+        <view class="investIntro">{{item.investment_introduce}}</view>
+        <view class="flex">
+          <label class="mainCase">主投</label>
+          <view class="mainCaseContent">
+            <block wx:for="{{item.industry_list}}" wx:key="{{index}}" wx:if="{{item.industry_list.length != 0}}" wx:for-item="industryList">
+              <label wx:if="{{index <  item.industry_list.length-1}}">{{industryList.industry_name}}、</label>
+              <label wx:if="{{index == item.industry_list.length-1}}">{{industryList.industry_name}}</label>
+            </block>
+          </view>
+        </view>
+        <view class="flex">
+          <label class="tapCase">标签</label>
+          <view class="mainCaseContent">
+            <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:if="{{item.style_list.length != 0}}" wx:for-item="styleList">
+              <label wx:if="{{index <  item.style_list.length-1}}">{{styleList.style_name}}、</label>
+              <label wx:if="{{index == item.style_list.length-1}}">{{styleList.style_name}}</label>
+            </block>
+          </view>
+        </view>
+        <view class="projectListBlock">
+          <block wx:for="{{item.project_list}}" wx:key="{{index}}" wx:if="{{item.project_list.length != 0}}" wx:for-item="projectList">
+            <label wx:if="{{index < item.project_list.length-1}}">{{projectList.event_time}}【{{projectList.event_project_name}}】、</label>
+            <label wx:if="{{index == item.project_list.length-1}}">{{projectList.event_time}}【{{projectList.event_project_name}}】</label>
+          </block>
+        </view>
       </view>
     </view>
   </block>
