--- a/Weitianshi/pages/organization/org_detail/org_detail.wxml
+++ b/Weitianshi/pages/organization/org_detail/org_detail.wxml
@@ -1,13 +1,14 @@
 <!--pages/organization/org_detail/org_detail.wxml-->
 <import src="/pages/Template/Template.wxml" />
-<scroll-view style='heigt:3000rpx;' scroll-y='true' >
+<scroll-view style='heigt:3000rpx;' scroll-y='true'>
   <!--投资机构类型，标签  -->
   <view class="media1">
     <view class="inMedia">
       <view class="detailIntroduce flex">
         <view class="detailLogo">
           <view class="detailLogo1">
-          <image src="{{info.investment_logo}}"></image>
+             <image src="{{info.investment_logo}}"  wx:if="{{info.investment_logo}}"></image> 
+            <image src="/img/warband-logo.png"  wx:if="{{info.investment_logo==''}}"></image> 
           </view>
         </view>
         <view class="detailName">{{info.investment_name}}</view>
@@ -15,13 +16,13 @@
       <view class="mediaLine"></view>
       <view class="detailType">
         <block wx:for="{{info.type_list}}" wx:key="{{item}}">
-         <view class="detailType1 detailColor detailRight">{{item.type_name}}</view>
+          <view class="detailType1 detailColor detailRight">{{item.type_name}}</view>
         </block>
       </view>
 
       <view class="detailType">
-         <block wx:for="{{info.style_list}}" wx:key="{{item}}">
-         <view class="detailType1 detailColor1 detailRight">{{item.style_name}}</view>
+        <block wx:for="{{info.style_list}}" wx:key="{{item}}">
+          <view class="detailType1 detailColor1 detailRight">{{item.style_name}}</view>
         </block>
       </view>
     </view>
@@ -31,43 +32,45 @@
     <view class="inMedia investBottom">
       <view class="investStrategy">投资策略</view>
       <view class="investStrategy1">* 根据机构近期投资事件刻画投资图谱</view>
-      <view class="investImg"></view>
+      <view class="investImg">
+        <image src="{{info.investment_strategy}}"></image>
+      </view>
     </view>
   </view>
   <!--机构介绍  -->
   <view class="media1">
     <view class="inMedia investBottom">
       <view class="investStrategy investBottom">机构介绍</view>
-      <view  class="{{checkedArr.ischecked1?'investIntroduce':'investIntroduceAfter'}}">{{info.investment_introduce}}</view>
+      <view class="{{checkedArr.ischecked1?'investIntroduce':'investIntroduceAfter'}}">{{info.investment_introduce}}</view>
       <label class="more" bindtap="allPoint1" wx:if="{{checkedArr.ischecked1 == true && longMore==true }}">更多</label>
-    <label class="more" bindtap="allPoint1" wx:if="{{checkedArr.ischecked1 == false && longMore==true }}">收起</label>
+      <label class="more" bindtap="allPoint1" wx:if="{{checkedArr.ischecked1 == false && longMore==true }}">收起</label>
     </view>
   </view>
-   <!--资本规模  -->
+  <!--资本规模  -->
   <view class="media1">
     <view class="inMedia investBottom">
-     <view class="scale">
-     <view class="scaleTitle investBottom">管理资本规模</view>
-     <view class="scaleDetail">
-     600亿人民币   其中包含  40亿美元 200亿人民币600亿人民币   其中包含  40亿美元 200亿人民币
-     </view>
-     </view>
-   <view class="scale">
-     <view class="scaleTitle investBottom">管理资本规模</view>
-     <view class="scaleDetail">
-     600亿人民币   其中包含  40亿美元 200亿人民币600亿人民币   其中包含  40亿美元 200亿人民币
-     </view>
-     </view>
+      <view class="scale">
+        <view class="scaleTitle investBottom">管理资本规模</view>
+        <view class="scaleDetail">
+          {{info.investment_capital_scale}}
+        </view>
+      </view>
+      <view class="scale">
+        <view class="scaleTitle investBottom">单个项目投资规模</view>
+        <view class="scaleDetail">
+          {{info.investment_project_scale}}
+        </view>
+      </view>
     </view>
   </view>
-   <!--投资领域  -->
+  <!--投资领域  -->
   <view class="media1">
     <view class="inMedia investBottom">
-     <view class="industry investBottom">投资领域</view>
+      <view class="industry investBottom">投资领域</view>
       <view class="detailType">
-       <block wx:for="{{info.industry_list}}" wx:key="{{item}}">
-        <!-- <view class="detailType1 detailColor detailRight">{{item.industry_name}}</view> -->
-         <template is='industry' data='{{item}}'></template>
+        <block wx:for="{{info.industry_list}}" wx:key="{{item}}">
+          <!-- <view class="detailType1 detailColor detailRight">{{item.industry_name}}</view> -->
+          <template is='industry' data='{{item}}'></template>
         </block>
         <!-- <view class="detailType1 detailColor detailRight">类型</view>
         <view class="detailType1 detailColor detailRight">类型类型</view>
@@ -78,54 +81,81 @@
       </view>
     </view>
   </view>
-     <!--投资轮次  -->
+  <!--投资轮次  -->
   <view class="media1">
     <view class="inMedia investBottom">
-     <view class="industry investBottom">投资轮次</view>
+      <view class="industry investBottom">投资轮次</view>
       <view class="detailType">
-       <view class="detailType">
-       <block wx:for="{{info.stage_list}}" wx:key="{{item}}">
-        <view class="detailType1 detailColor1 detailRight">{{item.stage_name}}</view>
-        </block>
-      </view>
+        <view class="detailType">
+          <block wx:for="{{info.stage_list}}" wx:key="{{item}}">
+            <view class="detailType1 detailColor1 detailRight">{{item.stage_name}}</view>
+          </block>
+        </view>
       </view>
     </view>
   </view>
-   <!--基金管理方  -->
+  <!--基金管理方  -->
   <view class="media1">
     <view class="inMedia investBottom">
-     <view class="industry investBottom">基金管理方</view>
-      <block wx:for="{{info.manage_fund_list}}" wx:key="{{item}}">
-     <view class="manageCompany">{{item.manage_fund_name}}</view>
-    </block>
+      <view class="industry investBottom flex">基金管理方</view>
+      <block wx:for="{{info.manage_fund_list}}" wx:key="{{index}}" wx:if="{{index<2 ||industrialChangeMore == 5}}">
+        <view class="manageCompany">{{item.manage_fund_name}}</view>
+      </block>
+      <label class="more" catchtap="checkMore" wx:if="{{industrialChangeMore!=5&&info.manage_fund_list.length>2 }}" data-id="{{5}}">更多</label>
+      <label class="more" catchtap="noCheckMore" wx:if="{{industrialChangeMore==5 }}" data-id="{{5}}">收起</label>
     </view>
   </view>
-    <!--投资案例  -->
+  <!--投资案例  -->
   <view class="media1">
-    <view class="inMedia investBottom flex case1">
-     <view class="case investBottom">投资案例</view>
-     <view class="caseAll investBottom">
-      <view class="caseIn"> 全部</view>
-     <view class="caseIn">({{investment_events.investment_event_total_num}})</view>
-     </view>
+    <view class="inMedia  flex case1">
+      <view class="case ">投资案例</view>
+      <view class="caseAll ">
+        <view class="caseIn caseLeft"> 全部</view>
+        <view class="caseIn">({{investment_events.investment_event_total_num}})</view>
+      </view>
     </view>
-     <block wx:for="{{investment_events.list}}" wx:key="{{investment_events.list}}">
-     <template is='invest' data='{{item}}'></template>
-    </block> 
+    <block wx:for="{{investment_events.list}}" wx:key="{{investment_events.list}}">
+      <template is='invest' data='{{item}}'></template>
+    </block>
   </view>
   <!--媒体新闻  -->
-   <!--投资案例  -->
   <view class="media1">
-    <view class="inMedia investBottom flex case1">
-     <view class="case investBottom">媒体新闻</view>
-     <view class="caseAll investBottom">
-      <view class="caseIn"> 全部</view>
-     <view class="caseIn">({{media_list.investment_event_total_num}})</view>
-     </view>
+    <view class="inMedia  flex case1">
+      <view class="case ">媒体</view>
+      <view class="caseAll ">
+        <view class="caseIn"> 全部</view>
+        <view class="caseIn caseLeft">({{media_list.media_total_num}})</view>
+      </view>
     </view>
-     <block wx:for="{{media_list.list}}" wx:key="{{media_list.list}}">
-     <template is='media' data='{{item}}'></template>
-    </block> 
+    <block wx:for="{{media_list.list}}" wx:key="{{media_list.list}}">
+      <template is='media' data='{{item}}'></template>
+    </block>
+  </view>
+  <!--在职成员  -->
+  <view class="media1">
+    <view class="inMedia  flex case1">
+      <view class="case ">在职成员</view>
+      <view class="caseAll ">
+        <view class="caseIn"> 全部</view>
+        <view class="caseIn caseLeft">({{member_list.member_total_num}})</view>
+      </view>
+    </view>
+   <block wx:for="{{memberList}}" wx:key="{{memberList}}">
+     <template is='memberList1' data='{{item}}'></template>
+    </block>
+  </view>
+   <!--离职成员  -->
+  <view class="media1">
+    <view class="inMedia  flex case1">
+      <view class="case ">离职成员</view>
+      <view class="caseAll ">
+        <view class="caseIn"> 全部</view>
+        <view class="caseIn caseLeft">({{leave_member_list.member_total_num}})</view>
+      </view>
+    </view>
+   <block wx:for="{{leaveList}}" wx:key="{{leaveList}}">
+     <template is='memberList1' data='{{item}}'></template>
+    </block>
   </view>
   <!--错误提示-->
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
