--- a/Weitianshi/pages/organization/org_detail/org_detail.wxss
+++ b/Weitianshi/pages/organization/org_detail/org_detail.wxss
@@ -49,7 +49,8 @@ page {
   /* background: red; */
 }
 .detailLogo1 image{
-  width: 100%
+  width: 154.44rpx;
+  height: 154.44rpx;
 }
 .detailType {
 }
@@ -95,10 +96,11 @@ page {
 .investImg {
   width: 100%;
   height: 327rpx;
-  background: red;
   margin-top: 15rpx;
 }
-
+.investImg image{
+  width: 100%
+}
 .investBottom {
   padding-bottom: 20rpx;
 }
@@ -152,12 +154,14 @@ color:#333333;
   background:rgba(244,76,76,0.10);
 border:1px solid rgba(244,76,76,0.20);
 border-radius:2px;
-width:360.36rpx;
+display: inline-block;
+padding: 0 20rpx;
 height:51.48rpx;
 font-size:12px;
 color:#f44c4c;
 text-align: center;
 line-height: 51.48rpx;
+margin-bottom: 25rpx;
 }
 .case1{
  justify-content:space-between;
@@ -174,4 +178,7 @@ text-align: left;
 color:#009eff;
 text-align: right;
 /* display: inline-block */
+}
+.caseLeft{
+  margin-left: 10rpx;
 }
