--- a/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxml
+++ b/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxml
@@ -1,2 +1,17 @@
 <!--pages/organization/subPage/list_orgMember/list_orgMember.wxml-->
-<text>pages/organization/subPage/list_orgMember/list_orgMember.wxml</text>
+<!--pages/organization/subPage/list_media/list_media.wxml-->
+<import src="/pages/Template/Template.wxml" />
+<scroll-view style='heigt:3000rpx;' scroll-y='true' bindscrolltolower='loadMore'>
+ 
+<view class="media12">
+  
+ <block wx:for="{{memberList}}" wx:key="{{memberList}}">
+     <template is='memberList1' data='{{item}}'></template>
+    </block>
+</view> 
+
+
+  <!--错误提示-->
+  <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+
+</scroll-view>
