--- a/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxss
+++ b/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxss
@@ -1,1 +1,11 @@
 /* pages/organization/subPage/list_orgMember/list_orgMember.wxss */
+page {
+  height: 100%;
+  /* overflow: hidden; */
+}
+
+.media12 {
+  width: 100%;
+  height: auto;
+  background: #fff;
+}
